bikes-service-api/src/main/java/com/example/bikes_service_api/utils/ErrorHandling/Errors/DataNotFoundException.java
package com.example.bikes_service_api.utils.ErrorHandling.Errors;

public class DataNotFoundException extends RuntimeException{
    public DataNotFoundException(String message){
        super(message);
    }
}
